// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GetGuidanceTagsFromGuidanceLinks handles a valid list with 1 link 1`] = `
[
  {
    "displayText": "guidanceLinks-tags-displayText-1",
    "id": "guidanceLinks-tags-id-1",
  },
]
`;

exports[`GetGuidanceTagsFromGuidanceLinks handles a valid list with 2 links 1`] = `
[
  {
    "displayText": "guidanceLinks-tags-displayText-1",
    "id": "guidanceLinks-tags-id-1",
  },
  {
    "displayText": "guidanceLinks-tags-displayText-2",
    "id": "guidanceLinks-tags-id-2",
  },
]
`;
